enhance benefits-service